--- a/programacao-funcional.ipynb
+++ b/programacao-funcional.ipynb
@@ -643,6 +643,173 @@
     "#### funcao_filter_lambda.py\n",
     "Substituímos a função ímpar pela função lambda (lambda item: item%2 != 0) que foi utilizada como argumento para a função filter (linha 4). Esta vai aplicar a função lambda em cada item da lista, retornando um novo iterável que foi impresso posteriormente (linha 7)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Exercícios Programação Funcional\n",
+    "#### Exercício 1\n",
+    "Considere a lista abaixo:\n",
+    "```py\n",
+    "veiculos = ['avião', 'carro', 'navio', 'onibus']\n",
+    "```\n",
+    "Implementar uma solução de programação funcional para transformar todos os nomes em maiúsculos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['avião', 'carro', 'navio', 'onibus']\n",
+      "['AVIÃO', 'CARRO', 'NAVIO', 'ONIBUS']\n"
+     ]
+    }
+   ],
+   "source": [
+    "veiculos = ['avião', 'carro', 'navio', 'onibus']\n",
+    "\n",
+    "transform_maiuscula = lambda x: x.upper()\n",
+    "\n",
+    "veiculos_maiusculos = list(map(transform_maiuscula, veiculos))\n",
+    "\n",
+    "print(veiculos)\n",
+    "print(veiculos_maiusculos)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "#### Exercício 2\n",
+    "Considere a lista abaixo:\n",
+    "```py\n",
+    "lista = [0,1,1,2,3,5,8,13,21,34]\n",
+    "```\n",
+    "\n",
+    "Implementar uma solução através de programação funcional para imprimir apenas os números pares."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 8, 34]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [0,1,1,2,3,5,8,13,21,34]\n",
+    "\n",
+    "func_pares = lambda item: item % 2 == 0\n",
+    "\n",
+    "nova_lista = list(filter(func_pares, lista))\n",
+    "\n",
+    "print(nova_lista)\n",
+    "\n",
+    "# OU\n",
+    "# lista = [0,1,1,2,3,5,8,13,21,34]\n",
+    "\n",
+    "# nova_lista = list(filter(lambda item: item % 2 ==0, lista))\n",
+    "\n",
+    "# print(nova_lista)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "#### Exercício 3\n",
+    "Considere as listas abaixo:\n",
+    "\n",
+    "```py\n",
+    "lista_numeros = [9.56783, 7.57568, 3.00914, 6.2321]\n",
+    "lista_precisao = [2,2,3,3]\n",
+    "```\n",
+    "\n",
+    "Implementar uma solução através de programação funcional para arredondar os valores da lista_numeros na mesma ordem da lista_precisao"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9.57, 7.58, 3.009, 6.232]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_numeros = [9.56783, 7.57568, 3.00914, 6.2321]\n",
+    "lista_precisao = [2,2,3,3]\n",
+    "\n",
+    "arredondamento = lambda x,y: round(x,y)\n",
+    "\n",
+    "resultado = list(map(arredondamento, lista_numeros, lista_precisao))\n",
+    "\n",
+    "print(resultado)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "#### Exercício 4\n",
+    "Considere a lista abaixo:\n",
+    "\n",
+    "```py\n",
+    "numeros = [1,2,3,4,5,6,7,8,9,10]\n",
+    "```\n",
+    "\n",
+    "Implementar uma solução através de programação funcional para somar todos os elementos da lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "import functools\n",
+    "\n",
+    "numeros = [1,2,3,4,5,6,7,8,9,10]\n",
+    "\n",
+    "somar = lambda x,y: x + y\n",
+    "\n",
+    "resultado = functools.reduce(somar, numeros)\n",
+    "\n",
+    "print(resultado)"
+   ]
   }
  ],
  "metadata": {
